# budgetmap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/budgetmap/: __init__.py  cli.py  models.py  report.py
src/budgetmap/analyzer/: __init__.py  allocation.py  trends.py  waste.py
src/budgetmap/budget/: __init__.py  categories.py  comparator.py  parser.py
src/budgetmap/data/: __init__.py  us_budget.py
src/budgetmap/visualizer/: __init__.py  charts.py  tables.py
tests/: test_allocation.py  test_benchmark.py  test_categories.py  test_cli.py  test_comparator.py  test_core.py  test_integration.py  test_models.py  test_parser.py  test_trends.py  test_us_budget.py  test_waste.py
